fix: harden native navigation for npm release